--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 
         <link rel="shortcut icon" href="{{ url_for('static', filename='Smart-Plant-Icon.png') }}">
 
-        <title>{% block title %}Smart Plant: Home{% endblock %}</title>
+        <title>Smart Plant: Home</title>
     </head>
     <body>
         <header class="navbar navbar-expand-md navbar-dark nav-color fixed-top">
