--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 
         <link rel="shortcut icon" href="{{ url_for('static', filename='Smart-Plant-Icon.png') }}">
 
-        <title>Smart Plant: Home</title>
+        <title>{% block title %} {% endblock %}</title>
     </head>
     <body>
         <header class="navbar navbar-expand-md navbar-dark nav-color fixed-top">
@@ -40,7 +40,45 @@
         </header>
         <main class="flex-shrink-0">
 
-            {% block content %}{% endblock %}
+            {% with messages = get_flashed_messages() %}  
+        {% if messages %}  
+            {% for message in messages %}
+                <div class="alert alert-warning text-center" role="alert" style="padding-top: 64px;">
+                    <p class="mb-0 mt-3">{{ message }}</p>
+                </div>
+            {% endfor %}  
+        {% endif %}  
+    {% endwith %}
+    <div class="alert alert-warning text-center" role="alert" id="alert"></div>
+    <div class="container px-4 px-md-3">
+        <div class="row align-items-lg-center align-items-md-center">
+            <div class="col-9 mx-auto col-md-6 order-md-4 col-lg-5">
+                <img src="{{ url_for('static', filename='Smart-Plant-1000x1000.png') }}" alt="Smart Plant Logo" height="500" width="500" class="img-fluid">
+            </div>
+            <div class="col justify-content-center pt-4">
+                <h1 class="mb-3 custom-font">Get Instant & Accurate Crop Disease Detection with Smart Plant</h1>
+                <div class="mb-0" style="max-width: 300px;">
+                    <label for="files" class="form-label">Upload Your Images Here: </label>
+                    <input class="form-control" type="file" name="files" accept=".jpg, .png, .jpeg, image/jpeg, image/png" id="files" multiple="true" required>
+                </div>
+                <form action = "/" method = "POST" enctype = "multipart/form-data">
+                    <div>
+                        <input type="file" name="hiddenfiles" id="hiddenfiles" multiple hidden>
+                        <div class="pt-2">
+                            <p>Note: Maximum Total file size limit is 50 MB. Only PNG, JPG/JPEG files are allowed. Your Uploaded Images automatically get deleted after 1 hour.</p>
+                            <p><a href="#crops-list" style="color: white;">List of currently supported crops</a></p>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="btn btn-light btn-lg" type="submit" id="submit" onclick="return submit_form();">Predict Now</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div id="image_preview" class="row mt-3 justify-content-center"></div>
+    </div>
+
+    <script src="{{ url_for('static', filename='main.js') }}" defer></script>
 
             <div id="features">
                 <div class="container px-4 px-md-3 pt-5">
@@ -227,76 +265,3 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     </body>
 </html>
-
-{% extends 'base.html' %}
-{% block title %} Smart Plant: Home {% endblock %}
-{% block content %}
-	{% with messages = get_flashed_messages() %}  
-		{% if messages %}  
-			{% for message in messages %}
-				<div class="alert alert-warning text-center" role="alert" style="padding-top: 64px;">
-					<p class="mb-0 mt-3">{{ message }}</p>
-				</div>
-			{% endfor %}  
-		{% endif %}  
-	{% endwith %}
-	<div class="alert alert-warning text-center" role="alert" id="alert"></div>
-	<div class="container px-4 px-md-3">
-		<div class="row align-items-lg-center align-items-md-center">
-			<div class="col-9 mx-auto col-md-6 order-md-4 col-lg-5">
-				<img src="{{ url_for('static', filename='Smart-Plant-1000x1000.png') }}" alt="Smart Plant Logo" height="500" width="500" class="img-fluid">
-			</div>
-			<div class="col justify-content-center pt-4">
-				<h1 class="mb-3 custom-font">Get Instant & Accurate Crop Disease Detection with Smart Plant</h1>
-				<div class="mb-0" style="max-width: 300px;">
-					<label for="files" class="form-label">Upload Your Images Here: </label>
-					<input class="form-control" type="file" name="files" accept=".jpg, .png, .jpeg, image/jpeg, image/png" id="files" multiple="true" required>
-				</div>
-				<form action = "/" method = "POST" enctype = "multipart/form-data">
-					<div>
-						<input type="file" name="hiddenfiles" id="hiddenfiles" multiple hidden>
-						<div class="pt-2">
-							<p>Note: Maximum Total file size limit is 50 MB. Only PNG, JPG/JPEG files are allowed. Your Uploaded Images automatically get deleted after 1 hour.</p>
-							<p><a href="#crops-list" style="color: white;">List of currently supported crops</a></p>
-						</div>
-					</div>
-					<div>
-						<button class="btn btn-light btn-lg" type="submit" id="submit" onclick="return submit_form();">Predict Now</button>
-					</div>
-				</form>
-			</div>
-		</div>
-		<div id="image_preview" class="row mt-3 justify-content-center"></div>
-	</div>
-
-	<script src="{{ url_for('static', filename='main.js') }}" defer></script>
-{% endblock %}
-
-{% extends 'base.html' %}
-{% block title %} Agent Crop: Show Prediction {% endblock %}
-{% block content %}
-    <div class="container">
-        <div class="row mt-5 justify-content-center">
-        {% for image, details in predictions.items() %}
-            <div class="card custom-bg-color card-custom mx-2 mb-3">
-                <img src="{{ folder+'/'+image }}" class="card-img-top mx-auto img-fluid" alt="Crop Image: {{ image }}" style="padding-top: 12px; max-height:250px; object-fit: cover;">
-                <div class="card-body">
-                    <p class="card-text"><strong>Image filename:</strong><br>{{ image }}</p>
-                    <p class="card-text"><strong>Predicted disease:</strong><br>{{ details["prediction"] }}</p>
-                    <p class="card-text"><strong>Description:</strong><br>{{ details["description"] }}</p>
-                    <p class="card-text"><strong>Identification/Symptoms:</strong><br>{{ details["symptoms"] }}</p>
-                    {% if "Healthy" in details["prediction"] %}
-                        <p class="card-text"><strong>Disease Management/Treatment:</strong><br>{{ details["source"] }}</p>
-                    {% else %}
-                        <p class="card-text"><strong>Disease Management/Treatment:</strong><br>For more information, visit the <a href='{{ details["source"] }}' target="_blank" style="color: white;">source</a>.</p>
-                    {% endif %}
-                </div>
-            </div>
-        {% endfor %}
-        </div>
-    </div>
-    <div class="container text-center">
-        <a href="/" class="btn btn-light btn-lg">Return to Home Page</a>
-        <p class="pt-2">Note: Your Uploaded Images automatically get deleted after 1 hour.</p>
-    </div>
-{% endblock %}
